--- a/paper/flir.tex
+++ b/paper/flir.tex
@@ -101,7 +101,7 @@ language.
 \begin{figure}[H]
 
     \centering
-    \includegraphics[width=0.85\textwidth]{../python/figures/smoking_by_marital_status}
+    \includegraphics[width=0.85\textwidth]{../bld/figures/fourier_estimation.png}
 
     \caption{\emph{Python:} Model predictions of the smoking probability over the
         lifetime. Each colored line represents a case where marital status is fixed to one
@@ -111,11 +111,6 @@ language.
 \end{figure}
 
 
-\begin{table}[!h]
-    \input{../python/tables/estimation_results.tex}
-    \caption{\label{tab:python-summary}\emph{Python:} Estimation results of the
-        linear Logistic regression.}
-\end{table}
 
 
 
